--- a/mo.tex
+++ b/mo.tex
@@ -134,38 +134,31 @@ E \sm T(\xi) \arrow{dr}[description]{\eta_{MO} \sm 1 \sm 1} \arrow[densely dotte
 E \sm T(\xi) \arrow[densely dotted]{rrr}{\theta_E} & & & E \sm \Susp^\infty_+ X,
 \end{tikzcd}
 \end{center}
-whose columns are retractions.  The dotted arrows $\theta_E$ are defined by following the solid path from corner to corner.  We claim that the two trapezoids so formed both commute.  To see this, consider the repeated diagram
+whose columns are retractions.  The dotted arrows $\theta_E$ are defined by following the solid path from corner to corner.  Similarly, the inverse $\alpha_{MO}$ to $\theta_{MO}$ induces a map $\alpha_E$.  We claim that $\theta_E$ and $\alpha_E$ are themselves inverses, which is shown by straggering and rearranging where the collapse of the $MO$ factor into $E$ happens.  The composite $\alpha_E \circ \theta_E$ is equivalent to the following:
+\begin{align*}
+E \sm \Susp^\infty_+ & X \xrightarrow{1 \sm \eta \sm 1} E \sm MO \sm \Susp^\infty_+ X \\
+& \xrightarrow{1 \sm 1 \sm \eta \sm 1} E \sm MO \sm MO \sm \Susp^\infty_+ X \\
+& \xrightarrow{1 \sm 1 \sm \theta_{MO}} E \sm MO \sm MO \sm T(\xi) \\
+& \xrightarrow{1 \sm \tau \sm 1} E \sm MO \sm MO \sm T(\xi) \\
+& \xrightarrow{1 \sm 1 \sm \alpha_{MO}} E \sm MO \sm MO \sm \Susp^\infty_+ X \\
+& \xrightarrow{\mu \sm 1 \sm 1} E \sm MO \sm \Susp^\infty_+ X \\
+& \xrightarrow{\mu \sm 1} E \sm \Susp^\infty_+ X,
+\end{align*}
+where $\tau$ is the twist map.  Using the commuting square
 \begin{center}
 \begin{tikzcd}
-& MO \sm E \sm T(\xi) \arrow{r}{\theta_{MO} \sm 1} \arrow{dl}[description]{(\mu \circ (\phi \sm 1)) \sm 1} & MO \sm E \sm \Susp^\infty_+ X\arrow{dr}[description]{(\mu \circ (\phi \sm 1)) \sm 1} \\
-E \sm T(\xi) \arrow{dr}[description]{\eta_{MO} \sm 1 \sm 1} \arrow[bend right,equal]{dd} & & & E \sm \Susp^\infty_+ X \arrow{dl}[description]{\eta_{MO} \sm 1 \sm 1} \arrow[bend left,equal]{dd} \\
-& MO \sm E \sm T(\xi) \arrow{r}{\theta_{MO} \sm 1} \arrow{dl}[description]{(\mu \circ (\phi \sm 1)) \sm 1} & MO \sm E \sm \Susp^\infty_+ X\arrow{dr}[description]{(\mu \circ (\phi \sm 1)) \sm 1} \\
-E \sm T(\xi) \arrow[densely dotted]{rrr}{\theta_E} & & & E \sm \Susp^\infty_+ X,
+E \sm MO \sm MO \arrow["1 \sm \mu"]{r} \arrow["\mu \sm 1"]{d} & E \sm MO \arrow["\mu"]{d} \\
+E \sm MO \arrow["\mu"]{r} & E,
 \end{tikzcd}
 \end{center}
-where the hexagon commutes because it expresses that the trace of the identity on an $MO \sm E$--module is an isomorphism invariant.  Using this, we follow the chains
+we have that the middle composite is equivalent to
 \begin{align*}
-& \quad [MO \sm E \sm T(\xi) \to E \sm T(\xi) \to E \sm \Susp^\infty_+ X] \\
-& \equiv [MO \sm E \sm T(\xi) \to E \sm T(\xi) \to MO \sm E \sm T(\xi) \\
-& \quad \quad \to MO \sm E \sm \Susp^\infty_+ X \to E \sm \Susp^\infty_+ X] \\
-& \equiv [MO \sm E \sm T(\xi) \to MO \sm E \sm \Susp^\infty_+ X \to E \sm \Susp^\infty_+ X \\
-& \quad \quad \to MO \sm E \sm \Susp^\infty_+ X \to E \sm \Susp^\infty_+ X] \\
-& \equiv [MO \sm E \sm T(\xi) \to MO \sm E \sm \Susp^\infty_+ X \to E \sm \Susp^\infty_+ X = E \sm \Susp^\infty_+ X] \\
-& \equiv [MO \sm E \sm T(\xi) \to MO \sm E \sm \Susp^\infty_+ X \to E \sm \Susp^\infty_+ X],
+E \sm \Susp^\infty_+ & X \xrightarrow{1 \sm \eta \sm 1} E \sm MO \sm \Susp^\infty_+ X \\
+& \xrightarrow{1 \sm \theta_{MO}} E \sm MO \sm T(\xi) \\
+& \xrightarrow{1 \sm \alpha_{MO}} E \sm MO \sm \Susp^\infty_+ X \\
+& \xrightarrow{\mu \sm 1} E \sm \Susp^\infty_+ X,
 \end{align*}
-which yields one of the two trapezoids.  The other is similar.
-
-Since $\theta_{MO}$ is an equivalence, it has an inverse $\alpha_{MO}$, and this similarly begets a map $\alpha_E$, which participates in its own pair of trapezoids.  Stacking them yields the identity
-\begin{align*}
-& \quad [E \sm T(\xi) \xrightarrow{\theta_E} E \sm \Susp^\infty_+ X \xrightarrow{\alpha_E} E \sm T(\xi)] \\
-& \equiv [E \sm T(\xi) \to E \sm \Susp^\infty_+ X \to MO \sm E \sm \Susp^\infty_+ X \\
-& \quad \quad \to MO \sm E \sm T(\xi) \to E \sm T(\xi)] \\
-& \equiv [E \sm T(\xi) \to MO \sm E \sm T(\xi) \to MO \sm E \sm \Susp^\infty_+ X \\
-& \quad \quad \to MO \sm E \sm T(\xi) \to E \sm T(\xi)] \\
-& \equiv [E \sm T(\xi) \to MO \sm E \sm T(\xi) \to E \sm T(\xi)] \\
-& \equiv [E \sm T(\xi) = E \sm T(\xi)].
-\end{align*}
-Showing that $\alpha_E$ is the left-inverse of $\theta_E$ is also similar.
+which is the identity on $E \sm \Susp^\infty_+ X$.  The proof that $\alpha_E$ is also the right-inverse of $\theta_E$ is similar.
 \end{proof}
 
 \begin{remark}
@@ -464,7 +457,7 @@ In summary, the formula $\RP^\infty_{\HFtwo P} \cong \G_a$ is meant to point out
 
 
 
-\vspace{-2\baselineskip}\section{Hopf algebra cohomology}\label{HopfAlgebraLecture}
+\section{Hopf algebra cohomology}\label{HopfAlgebraLecture}
 
 In this section, we will focus on an important classical tool: the \index{Adams spectral sequence}Adams spectral sequence.  We are going to study this in greater earnest later on, so we will avoid giving a satisfying construction in this Lecture.  Still, even without a construction, it is instructive to see how this comes about from a moral perspective.
 
@@ -488,14 +481,18 @@ We see that mod--$2$ homology can immediately distinguish between the null map a
 \intertext[12pt]{The homology groups of these spectra $C(0)$ and $C(2)$ are more complicated than just that of $\S^0$, and we will draw them according to the following conventions: each ``$\bullet$'' in the row labelled ``$[j]$'' indicates an $\F_2$--summand in the $j${\th} $\HFtwo$--homology of the spectrum.  Applying homology to these cofiber sequences and drawing the results, these again appear to be identical:}
 {[1]} \& \& \bullet \& \arrow[leftarrow]{l} \bullet \& \& \bullet \& \arrow[leftarrow]{l} \bullet \\
 {[0]} \& \bullet \& \arrow[leftarrow]{l} \bullet \& \& \bullet \& \arrow[leftarrow]{l} \bullet \\
-\& H\F_{2*} \S^0 \& \arrow[leftarrow]{l} H\F_{2*} C(0) \& \arrow[leftarrow]{l} H\F_{2*} \S^1, \& H\F_{2*} \S^0 \& \arrow[leftarrow]{l} H\F_{2*} C(2) \& \arrow[leftarrow]{l} H\F_{2*} \S^1,
-\intertext[12pt]{However, if we enrich our picture with the data we discussed in \Cref{TheSteenrodAlgebraSection}, we can finally see the difference.  Recall the topological equivalences \[C(0) \simeq \S^0 \vee \S^1, \quad C(2) \simeq \Susp^{-1} \Susp^\infty \RP^2.\]  In the two cases, the coaction map $\lambda_*$ is given by
+\& H\F_{2*} \S^0 \& \arrow[leftarrow]{l} H\F_{2*} C(0) \& \arrow[leftarrow]{l} H\F_{2*} \S^1, \& H\F_{2*} \S^0 \& \arrow[leftarrow]{l} H\F_{2*} C(2) \& \arrow[leftarrow]{l} H\F_{2*} \S^1.
+\end{tikzcd}
+\end{center}
+=However, if we enrich our picture with the data we discussed in \Cref{TheSteenrodAlgebraSection}, we can finally see the difference.  Recall the topological equivalences \[C(0) \simeq \S^0 \vee \S^1, \quad C(2) \simeq \Susp^{-1} \Susp^\infty \RP^2.\]  In the two cases, the coaction map $\lambda_*$ is given by
 \begin{align*}
 \lambda_*: H\F_{2*} C(0) & \to H\F_{2*} C(0) \otimes \mathcal A_* & \lambda_*: H\F_{2*} C(2) & \to H\F_{2*} C(2) \otimes \mathcal A_* \\
 \lambda^*: e_0 & \mapsto e_0 \otimes 1 & \lambda^*: e_0 & \mapsto e_0 \otimes 1 + e_1 \otimes \xi_1 \\
 \lambda^*: e_1 & \mapsto e_1 \otimes 1, & \lambda^*: e_1 & \mapsto e_1 \otimes 1.
 \end{align*}
-We use a vertical line to indicate the nontrivial coaction involving $\xi_1$:}
+We use a vertical line to indicate the nontrivial coaction involving $\xi_1$:
+\begin{center}
+\begin{tikzcd}[column sep=0.55em, ampersand replacement=\&]
 {[1]} \& \& \bullet \& \arrow[leftarrow]{l} \bullet \& \& \bullet \arrow[-, "{\xi_1}" description]{d} \& \arrow[leftarrow]{l} \bullet \\
 {[0]} \& \bullet \& \arrow[leftarrow]{l} \bullet \& \& \bullet \& \arrow[leftarrow]{l} \bullet \\
 \& H\F_{2*} \S^0 \& \arrow[leftarrow]{l} H\F_{2*} C(0) \& \arrow[leftarrow]{l} H\F_{2*} \S^1, \& H\F_{2*} \S^0 \& \arrow[leftarrow]{l} H\F_{2*} C(2) \& \arrow[leftarrow]{l} H\F_{2*} \S^1.
