some bordism splitting citations

--- a/main.bib
+++ b/main.bib
@@ -314,6 +314,23 @@ MRREVIEWER = {A. Dold},
   publisher={Wiley Online Library}
 }
 
+@article {ABS,
+    AUTHOR = {Atiyah, M. F. and Bott, R. and Shapiro, A.},
+     TITLE = {Clifford modules},
+   JOURNAL = {Topology},
+  FJOURNAL = {Topology. An International Journal of Mathematics},
+    VOLUME = {3},
+      YEAR = {1964},
+    NUMBER = {suppl. 1},
+     PAGES = {3--38},
+      ISSN = {0040-9383},
+   MRCLASS = {57.30 (55.30)},
+  MRNUMBER = {0167985},
+MRREVIEWER = {J. F. Adams},
+       DOI = {10.1016/0040-9383(64)90003-5},
+       URL = {http://dx.doi.org/10.1016/0040-9383(64)90003-5},
+}
+
 @article{BaezDolan,
   title={Euler characteristic versus homotopy cardinality},
   author={Baez, John},
