--- a/unknowns.tex
+++ b/unknowns.tex
@@ -47,8 +47,7 @@ Our first major project in this text, whose culmination we recorded in \Cref{MOS
     \item These results then similarly assemble to yield a splitting at the level of $2$--complete spectra through Adams spectral sequence methods.\footnote{Replacing $2$ by $p$ everywhere, one can also produce odd-primary results.}
 \end{enumerate}
 
-\citeme{Find citations}
-For instance, by studying the homology of $M\SO$, one finds that the unit class in $\HFtwo_* M\SO$ generates the submodule \[1 \cdot \mathcal A_* \mmod (\Sq^1) \subseteq \HFtwo_* M\SO,\] and an appropriate generalization of Milnor--Moore then gives a splitting \[M\SO \simeq \left( \bigvee_j \Susp^{n_j} \HFtwo \right) \vee \left( \bigvee_k \Susp^{m_k} H\Z \right).\]  Similarly, the homology of $M\Spin$ reveals an inclusion~\cite{ABP,GiambalvoPengelley}\todo{Are these the right citations? ABS?} \[1 \cdot \mathcal A_* \mmod (\Sq^1, \Sq^2) \subseteq \HFtwo_* M\Spin,\] and a further generalization of Milnor--Moore ultimately produces a splitting\footnote{However, this time the splitting is not one of ring spectra.} \[M\Spin \simeq \left( \bigvee_j kO[n_j, \infty)\right) \vee \left( \bigvee_k \Susp^{m_k} H\F_2 \right).\]  When studying $M\String$, one finds that there is an inclusion \[1 \cdot \mathcal A_* \mmod (\Sq^1, \Sq^2, \Sq^4) \subseteq \HFtwo_* M\String,\] but at this point the Adams spectral sequence becomes too intricate to analyze effectively and no analogous splitting of $M\String$ has yet been produced.\footnote{There are also complex analogues of these results:
+For instance, by studying the homology of $M\SO$, one finds that the unit class in $\HFtwo_* M\SO$ generates the submodule~\cite[Lemma 20.38]{Switzer} \[1 \cdot \mathcal A_* \mmod (\Sq^1) \subseteq \HFtwo_* M\SO,\] and an appropriate generalization of Milnor--Moore then gives a splitting \[M\SO \simeq \left( \bigvee_j \Susp^{n_j} \HFtwo \right) \vee \left( \bigvee_k \Susp^{m_k} H\Z \right).\]  Similarly, the homology of $M\Spin$ reveals an inclusion~\cite{ABS,ABP,GiambalvoPengelley} \[1 \cdot \mathcal A_* \mmod (\Sq^1, \Sq^2) \subseteq \HFtwo_* M\Spin,\] and a further generalization of Milnor--Moore ultimately produces a splitting\footnote{However, this time the splitting is not one of ring spectra.} \[M\Spin \simeq \left( \bigvee_j kO[n_j, \infty)\right) \vee \left( \bigvee_k \Susp^{m_k} H\F_2 \right).\]  When studying $M\String$, one finds that there is an inclusion \[1 \cdot \mathcal A_* \mmod (\Sq^1, \Sq^2, \Sq^4) \subseteq \HFtwo_* M\String,\] but at this point the Adams spectral sequence becomes too intricate to analyze effectively and no analogous splitting of $M\String$ has yet been produced.\footnote{See, however, recent work of Laures--Schuster~\cite{LauresSchuster}.}\footnote{There are also complex analogues of these results:
 \[
 MU \simeq \bigvee_j \Susp^{n_j} BP, \quad
 M\SU \simeq \left(\bigvee_j \Susp^{n_j} BP\right) \vee \left(\bigvee_k \Susp^{m_k} BoP \right),
@@ -103,13 +102,13 @@ By shifting this presentation slightly, we highlight an interesting comparison m
 
 This alternative presentation of the sphere spectrum as a Tate spectrum yields a filtration spectral sequence \[\pi_* \S^* \Rightarrow \pi_* (S^{-1})^\wedge_2.\]  In terms of this spectral sequence, any stable stem is represented by a (coset of) element(s) on the $E_1$--page, and this reverse reading of the spectral sequence is known as the \textit{Mahowald root invariant}~\cite{MahowaldShick}.  The root invariant appears to possess deeply interesting redshifting properties---not wholly surprising, since we are reading a blueshifting construction in reverse.  For instance, the root of $p$ lies in the $\alpha$--family, and the root of an $\alpha$--family element lies in the $\beta$--family~\cite{BehrensRootInv}.  The root invariant has many striking connections to other areas of topology~\cite{MahowaldRavenel}.
 
-In addition to the chromatic properties waiting to be explored, the Tate construction itself has some truly puzzling features.  Mahowald's original perspective on the Tate construction was through the definition \[R^{tC_2} := \lim_{n \to \infty} \Susp R \sm P^\infty_{-n},\] whereas the general construction of Greenlees--May~\cite{GreenleesMay}\footnote{Stroilova's PhD thesis~\cite{Stroilova} gives a variation of this construction that converts an $E(n)$--local ring spectrum to an $E(n-k)$--local ring spectrum.} uses the formula \[R^{tG} = (F(EG_+, R) \sm \widetilde{EG})^G,\] whose pieces in the case at hand consist of $EG_+ = S(\infty \L)$ and $\widetilde{EG} = S^{\infty \mathcal L}$, which rearranges to give \[R^{tC_2} := \colim_{m \to \infty} F(P^\infty_{-m}, R).\]  Something quite spooky has happened: a colimit and a limit were inexplicably interchanged in the formulas \[\RP^\infty_{-\infty} = \colim_n \lim_m \RP^n_{-m} = \lim_m \colim_n \RP^n_{-m}.\]  Understanding why these extremely different constructions give the same answer will likely yield some very important background theory.\footnote{There is a superficially related famous problem known as the Telescope Conjecture.  Namely, there are various ``finitary'' flavors of chromatic localization, which are typically less categorically robust but more computable.  They assemble into a diagram:
+In addition to the chromatic properties waiting to be explored, the Tate construction itself has some truly puzzling features.  Mahowald's original perspective on the Tate construction was through the definition \[R^{tC_2} := \lim_{n \to \infty} \Susp R \sm P^\infty_{-n},\] whereas the general construction of Greenlees--May~\cite{GreenleesMay}\footnote{Stroilova's PhD thesis~\cite{Stroilova} gives a variation of this construction that converts an $E(n)$--local ring spectrum to an $E(n-k)$--local ring spectrum.} uses the formula \[R^{tG} = (F(EG_+, R) \sm \widetilde{EG})^G,\] whose pieces in the case at hand consist of $EG_+ = S(\infty \L)$ and $\widetilde{EG} = S^{\infty \mathcal L}$, which rearranges to give \[R^{tC_2} := \colim_{m \to \infty} F(P^\infty_{-m}, R).\]  Something quite spooky has happened: a colimit and a limit were inexplicably interchanged in the formulas \[\RP^\infty_{-\infty} = \colim_n \lim_m \RP^n_{-m} = \lim_m \colim_n \RP^n_{-m}.\]  Understanding why these extremely different constructions give the same answer will likely yield some very important background theory.\todo{Footnote todo: \textbf{Find some proofs and disproofs.}}\footnote{There is a superficially related famous problem known as the Telescope Conjecture.  Namely, there are various ``finitary'' flavors of chromatic localization, which are typically less categorically robust but more computable.  They assemble into a diagram:
 \[\begin{array}{ccccc}
 E & \to & L_d^{\fin} E & \to & L_d E \\
 \downarrow & & \downarrow & & \downarrow \\
 L_{X(d)} E & \to & \widehat L_d^{\fin} E & \to & \widehat L_d E,
 \end{array}\]
-where $X(d)$ is a finite complex of type exactly $d$, $v$ is a $v_d$--self-map of $X(d)$, $T(d) = X(d)[v^{-1}]$ is the localizing telescope, $\widehat L_d^{\fin}$ is Bousfield localization with respect to $T(d)$ (which can be shown to be independent of choice of $X(d)$ and of $v$), and $L_d^{\fin}$ denotes localization with respect to the class of \emph{finite} $E(d)$--acyclics.  Much is known about these functors: for instance, $L_{X(d)} L_d = \widehat L_d$, there is a chromatic fracture square relating $L_d^{\fin}$ to $\widehat L_{\le d}^{\fin}$, and $L_d^{\fin} E \simeq L_d E$ if and only if $\widehat L_{\le d}^{\fin} E \simeq \widehat L_{\le d} E$.  One major question about these functors remains open, corresponding the last unsettled nilpotence and periodicity conjecture of Ravenel~\cite[Conjecture 10.5]{RavenelLocalizationWRTPeriodic}: is the map $\widehat L_d^{\fin} E \to \widehat L_d E$ an equivalence?  Multiple proofs and disproofs have been offered, but the literature remains unsettled. \textbf{Find some proofs and disproofs.}  Our interest in this problem here is in the formula $\widehat L_d^{\fin} E = \colim\left(X(d) \sm E \xrightarrow{v} X(d) \sm E\right)$: this formulas has a colimit, whereas the formula for the right-hand side given in \Cref{FormulaForKnLocalization} has a limit.}
+where $X(d)$ is a finite complex of type exactly $d$, $v$ is a $v_d$--self-map of $X(d)$, $T(d) = X(d)[v^{-1}]$ is the localizing telescope, $\widehat L_d^{\fin}$ is Bousfield localization with respect to $T(d)$ (which can be shown to be independent of choice of $X(d)$ and of $v$), and $L_d^{\fin}$ denotes localization with respect to the class of \emph{finite} $E(d)$--acyclics.  Much is known about these functors: for instance, $L_{X(d)} L_d = \widehat L_d$, there is a chromatic fracture square relating $L_d^{\fin}$ to $\widehat L_{\le d}^{\fin}$, and $L_d^{\fin} E \simeq L_d E$ if and only if $\widehat L_{\le d}^{\fin} E \simeq \widehat L_{\le d} E$.  One major question about these functors remains open, corresponding the last unsettled nilpotence and periodicity conjecture of Ravenel~\cite[Conjecture 10.5]{RavenelLocalizationWRTPeriodic}: is the map $\widehat L_d^{\fin} E \to \widehat L_d E$ an equivalence?  Multiple proofs and disproofs have been offered, but the literature remains unsettled.  Our interest in this problem here is in the formula $\widehat L_d^{\fin} E = \colim\left(X(d) \sm E \xrightarrow{v} X(d) \sm E\right)$: this formulas has a colimit, whereas the formula for the right-hand side given in \Cref{FormulaForKnLocalization} has a limit.}
 
 The blueshifting behavior of the Tate construction begs for insertion into the framework for understanding chromatic homotopy theory described in the main thread of this text.  For instance, the formal-geometric perspective on the isomorphism in Lin's theorem is that the residue map $\F_2(\!(x)\!) \to \F_2\{x^{-1}\}$ is a quasi-isomorphism of continuous Steenrod comodules~\cite[Remark 8.34]{StricklandFSFG}.\footnote{Reader beware: it is, of course, actually illegal to commute ordinary homology past the inverse limit.}  The framework of $p$--divisible groups appearing around the edges of this book seems to show a lot of promise for serving as a general organizing principle for these ``transchromatic'' results, but this largely has not been worked out.\footnote{For instance, contact between $p$--divisible groups and the Tate construction is visible in work of Greenlees and Strickland~\cite{GreenleesStrickland}, \cite[pg.\ 10]{StricklandFPFP}, and $p$--divisible groups have played a central role in the height-modulating phenomena of Hopkins--Kuhn--Ravenel character theory (see \Cref{CharacterTheorySection}, \cite{HKR}) and in its extensions by Stapleton (see, for example, \cite{Stapleton}).}
 
@@ -223,9 +222,7 @@ There is further hope that the analogy to special values of $L$--functions can b
 
 
 
-
-
-\citeme{Yanovski}
+\todo{Summarize this more briefly.}
 The program above is not the only way that homotopy theory appears to admit $p$--adic interpolation, as the following striking result of Yanovski demonstrates.  A \textit{generalized homotopy cardinality function} is a function $\chi$, defined only on spaces generated under finite colimits by $\pi$--finite spaces and valued in rational numbers, which satisfies
 \begin{enumerate}
     \item Homotopy invariance: if $A \simeq B$, then $\chi(A) = \chi(B)$.
