--- a/finite.tex
+++ b/finite.tex
@@ -999,7 +999,7 @@ is actually affine, and this is a witness to the fact that $X(2) \sm KO$ is a co
 
 Having constructed these chromatic homology theories, for the rest of this Lecture we pursue an example of a ``fiberwise'' analysis of a phenomenon in homotopy theory.  First, recall the following classical theorem:
 
-\begin{theorem}[{Nishida's theorem, \cite{Nishida}, \cite[Section II.2]{BMMS}}]
+\begin{theorem}[{Nishida's Theorem, \cite{Nishida}, \cite[Section II.2]{BMMS}}]
 Every homotopy class $\alpha \in \pi_{\ge 1} \S$ is nilpotent. \qed
 \end{theorem}
 
