--- a/powerops.tex
+++ b/powerops.tex
@@ -45,7 +45,7 @@ In \Cref{QuillenPowerOpnsSection}, \Cref{StabilizingTheMUSteenrodOps}, and \Cref
 An orientation $MU[6, \infty) \to E_\Gamma$ is $H_\infty$ if and only if the induced cubical structure is \index{norm!coherence}``norm-coherent'' (cf.\ \Cref{NormCoherentDefn}). \qed
 \end{theorem}
 
-\noindent Before addressing this, we discuss in \Cref{CharacterTheorySection} an important phenomenon: after deleting certain forms of torsion, the Morava $E_\Gamma$--homology of a finite spectrum can be well--approximated by its Morava $E_{\Gamma'}$--homology where $\Gamma'$ satisfies $\height{\Gamma'} < \height{\Gamma}$.  This is interesting in its own right, and we will quickly see that the precise form of the approximation bears directly on the study of power operations.  Finally, with the homotopy category exposed, turn to $E_\infty$--ring spectra themselves: we give a summary of the known results about $E_\infty$ orientations in \Cref{JuvitopTalkSection}, but in \Cref{ConstructionOfTMFSection} we first introduce the spectrum $\TMF$, which is the primary target of the $\String$--orientation.
+\noindent Before addressing this, we discuss in \Cref{CharacterTheorySection} an important phenomenon: after deleting certain forms of torsion, the Morava $E_\Gamma$--homology of a finite spectrum can be well--approximated by its Morava $E_{\Gamma'}$--homology where $\Gamma'$ satisfies $\height{\Gamma'} < \height{\Gamma}$.  This is interesting in its own right, and we will quickly see that the precise form of the approximation bears directly on the study of power operations.  Finally, with the homotopy category exposed, we turn to $E_\infty$--ring spectra themselves: we give a summary of the known results about $E_\infty$ orientations in \Cref{JuvitopTalkSection}, but in \Cref{ConstructionOfTMFSection} we first introduce the spectrum $\TMF$, which is the primary target of the $\String$--orientation.
 
 
 
