bunch of typesetting fixes to Nat's appendix

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -1150,7 +1150,7 @@ We use this to continue the analysis of the case $q = 1$ and $j = \infty$, where
 
 There is a lot of structure visible in this collection of spectral sequences, as considered simultaneously.  Without further inspection, the spectral sequence at $j = \infty$ records that $\CP^\infty_K$ is a formal variety, and the spectral sequences at the finite values $1 \le j < \infty$ encode in their differentials the behavior of the map $p^j\co \Gamma \to \Gamma$ on functions---indeed, this appears to be the entire job of $a'_\emptyset$.  Lastly, we notice that the $E_\infty$ page of each finite-range spectral sequence includes into the spectral sequence at $j = \infty$, and moreover this filtration is exhaustive: every term in the $j = \infty$ spectral sequence appears at some $j < \infty$ stage.  Since this last property is about the $E_\infty$ pages, it is really a property of the formal group $\Gamma$, which we record in a definition:
 
-\begin{definition}[{\cite[Definition 4.1]{GrothendieckCristaux}}]
+\begin{definition}[{\cite[Definition 4.1]{GrothendieckCristaux}}]\label{DefnPDivGp}
 A \index{p divisible group@$p$--divisible group}\textit{$p$--divisible group}\footnote{Some like to call these \index{Barsotti--Tate group|see {$p$--divisible group}}\textit{Barsotti--Tate groups}, which is probably the better name, since ``$p$--divisible group'' sounds like a property rather than all this data.} over a field $k$ is a system $\mathbb G_j$ of finite group schemes and inclusions $i_k^j\co \mathbb G_k \to \mathbb G_j$ for $k < j$ which model the inclusions $\mathbb G_j[p^k] \subseteq \mathbb G_j$.
 \end{definition}
 
