--- a/powerops.tex
+++ b/powerops.tex
@@ -61,6 +61,22 @@ An orientation $MU[6, \infty) \to E_\Gamma$ is $H_\infty$ if and only if the ind
 
 \section{Rational chromatic phenomena (Nathaniel Stapleton)}\label{CharacterTheorySection}
 
+Before embarking on the rather ambitious project of understanding the collection of $H_\infty$ ring maps $\phi\co MU[6, \infty) \to E_\Gamma$, it would be instructive to be able to answer the following: if we had such an orientation, would data could we extract from it?  The main feature of such a map is that it belongs to a commutative diagram
+\begin{center}
+\begin{tikzcd}
+MU[6, \infty)^0(X) \arrow["\phi"]{r} \arrow["P_{\Sigma_n}^{MU[6, \infty)}(X)"]{d} & E^0(X) \arrow["P_{\Sigma_n}^E(X)"]{d} \\
+MU[6, \infty)^0(B\Sigma_n \times X) \arrow["P_{\Sigma_n}(\phi)"]{r} & E^0(B\Sigma_n \times X).
+\end{tikzcd}
+\end{center}
+Before understanding the maps in this commutative diagram, we must understand its nodes.  There is a natural map \[E^0(B\Sigma_n) \otimes_{E^0} E^0(X) \to E^0(B\Sigma_n \times X),\] and whether it is to an equivalence is highly dependent on the structure of $E^0(B\Sigma_n)$ itself---for instance, this would be the case if $E^0(B\Sigma_n)$ were flat as an $E^0$--module.  For this reason, we are strongly motivated to feel out any foothold on this object that we are able to find, and a critical such foothold is the chromatic character theory of Hopkins, Kuhn, and Ravenel~\cite{HKR}.  Their theorems describe the Morava $E$--cohomology of a finite group with certain forms of torsion (e.g., $p$--torsion) deleted, and we give an introduction to their results in this Lecture.
+
+\todo[inline]{Cross-references into the books
+Make sure there are no double-hats in A.1
+Make sure *all* Homs got changed to CatOf and InternalHom in A.1. (TopologicalGroupoids should be internal.)
+Make sure that the introduction says all of this is in HKR
+
+Insert Schlank-Stapleton reference into Strickland’s Theorem subsection}
+
 \todo[inline]{Some other references:
 Morava's \textit{Local fields} paper; 
 Theorem 2.6 of Greenlees--Strickland;
