--- a/finite.tex
+++ b/finite.tex
@@ -1054,7 +1054,7 @@ A ring spectrum $R$ is a \index{field spectrum}\textit{field spectrum} when ever
 \end{definition}
 
 \begin{corollary}\label{FieldSpectraAreKTheories}
-Every field spectrum $R$ splits as a wedge of Morava's $K(d)$ theories.
+Every field spectrum $R$ splits as a wedge of Morava's theories $K(d)$.
 \end{corollary}
 \begin{proof}
 It is easy to check (as mentioned in the proof of \Cref{LocalNilpotenceDetection}) that $K(d)$ is a field spectrum.
